# cpu_features.NET

./: .cirrus.yml  .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  CpuFeaturesDotNet.sln  CpuFeaturesDotNet.sln.DotSettings  Dockerfile  Dockerfile.ubuntu-arm32  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: amd64_linux.yml  amd64_macos.yml  amd64_windows.yml  dotnet-format.yml  dotnet.yml  linux_arm.yml  linux_x86-64.yml  osx_x86-64.yml  run-tests.yml  start-nuget-build.yml  win_x86-64.yml  windows_x86-64  windows_x86-64.yml  x86-64.yml
ConsoleApp2/: Program.cs
ConsoleApp5/: ConsoleApp5.csproj  Program.cs
CpuFeaturesDotNet.Sample/: Program.cs
cmake/: CpuFeaturesDotNet.csproj.in  cpu_features.CMakeLists.txt.in
cmake/templates/: CpuFeaturesDotNet.csproj.in  CpuFeaturesDotNet.runtime.csproj.in  Nuget.Config.in  cpu_features.CMakeLists.txt.in
cmake/toolchains/: default.cmake
deploy/CpuFeaturesDotNet.GoogleDriveDeploy/: CpuFeaturesDotNet.GoogleDriveDeploy.csproj  Program.cs
lib/: CMakeLists.txt
lib/include/: arch.h  cpu_features_memory.h  cpu_features_port_macros.h  cpuid_x86.h  cpuinfo_aarch64_port.h  cpuinfo_arm_port.h  cpuinfo_x86.h  cpuinfo_x86_port.h  macros.h  macros_x86.h  os.h
lib/include/aarch32/: cpuinfo_arm.h
lib/include/aarch64/: cpuinfo_aarch64.h  cpureg_aarch64.h  cputype_aarch64.h
lib/include/shared/: arch.h  architecture.h  cpu_features_macros.h  cpu_utils.h  filesystem.h  macros.h  memory_utils.h  operating_system_utils.h  os.h  string_utils.h
lib/include/x86-64/: cpuid_x86.h  cpuinfo_x86.h
lib/src/: arch.c  copy.inl  cpu_features_memory.c  cpuid_x86.c  cpuinfo_arm.c  cpuinfo_x86.c  filesystem.c  impl_cpuinfo_aarch64_port.c  impl_cpuinfo_arm_port.c  impl_cpuinfo_x86_port.c  os.c
lib/src/aarch64/: cpuinfo_aarch64.c  cputype_aarch64.c
lib/src/shared/: architecture.c  filesystem.c  memory_utils.c  operating_system_utils.c  string_utils.c
lib/src/utils/: cpu_features_entry.c
lib/src/x86-64/: cpuinfo_x86.c
samples/CpuFeaturesDotNet.Samples/: CpuFeaturesDotNet.Samples.csproj  CpuFeaturesListAArch64.cs  CpuFeaturesListAarch64.cs  CpuFeaturesListArm.cs  CpuFeaturesListX64.cs  (+3 more)
samples/CpuFeaturesDotNet.Samples.CSharp/: CpuFeaturesDotNet.Samples.CSharp.csproj  Program.cs
scripts/: run_integration.sh  run_win_x86_net472_tests.bat
src/: CMakeLists.txt  CpuFeaturesDotNet.csproj
src/CpuFeaturesDotNet/: BitUtils.cs  CacheInfo.cs  CacheInfoNative.cs  CacheLevelInfo.cs  CacheType.cs  CpuFeaturesDotNet.csproj  Library.cs
src/CpuFeaturesDotNet.Utils/: BitUtils.cs  CpuFeaturesDotNet.Utils.csproj  MemoryUtils.cs  StringUtils.cs
src/CpuFeaturesDotNet/AArch32/: ArmFeatures.cs  ArmInfo.cs  ArmInfoNative.cs
src/CpuFeaturesDotNet/AArch64/: Aarch64Features.cs  Aarch64Info.cs  Aarch64InfoNative.cs
src/CpuFeaturesDotNet/AArch64/CpuInfo/: CpuImplementorAArch64.cs  CpuInfoAArch64.cs  CpuInfoUtilsAArch64.cs  CpuPartNumberAArch64.cs  ICpuInfoAArch64.cs
src/CpuFeaturesDotNet/Aarch64/CpuInfo/: CpuImplementorAarch64.cs  CpuInfoAarch64.cs  CpuInfoUtilsAarch64.cs  CpuMidrModel.cs  CpuPartAarch64.cs  CpuPartNumberAarch64.cs  CpuTypeAarch64.cs  CpuTypeUtilsAarch64.cs  ICpuInfoAarch64.cs
src/CpuFeaturesDotNet/CpuX86/: CpuMicroarchitectureX86.cs  Leaf.cs
src/CpuFeaturesDotNet/IO/: FileSystem.cs  LineResult.cs  StackLineReader.cs  StringView.cs
src/CpuFeaturesDotNet/Imports/: DllPath.cs
src/CpuFeaturesDotNet/Native/: Architecture.cs  BitUtils.cs  DllPath.cs  Library.cs  NativeEncodingAscii.cs  NativeMemory.cs  NativeString.cs
src/CpuFeaturesDotNet/Native/OperatingSystem/: DarwinNative.cs  OSNative.cs  WindowsNative.cs
src/CpuFeaturesDotNet/Utils/: BitUtils.cs  CpuFeaturesImport.cs  MemoryUtils.cs  StringUtils.cs
src/CpuFeaturesDotNet/X86/: CpuInfoX86.cs  MicroarchitectureX86.cs  NativeX86.cs  OsPreservesX86.cs  UtilsX86.cs  X86Features.cs  X86Info.cs  X86InfoNative.cs  X86Microarchitecture.cs
src/CpuFeaturesDotNet/X86/Cache/: CacheInfoX86.cs  CacheLevelInfoX86.cs  CacheTypeX86.cs  ICacheInfoX86.cs
src/CpuFeaturesDotNet/X86/Cache/Parser/: AmdCacheInfoParserX86.cs  AmdLegacyCacheInfoParserX86.cs  CacheInfoX86Parser.cs  IntelCacheInfoParserX86.cs
src/CpuFeaturesDotNet/X86/CpuInfo/: CpuInfoX86.cs  ICpuInfoX86.cs  LeafX86.cs  MicroarchitectureX86.cs  VendorX86.cs
src/CpuFeaturesDotNet/X86/Features/: FeaturesAmxX86.cs  FeaturesAvxX86.cs  FeaturesSseX86.cs  FeaturesUtilsX86.cs  FeaturesX86.cs
src/CpuFeaturesDotNet/X86/Helpers/: CacheInfoHelperX86.cs  FeaturesHelperX86.cs
src/CpuFeaturesDotNet/X86/OperatingSystem/: DarwinFeaturesX86.cs  FreeBsdFeaturesX86.cs  LinuxAndroidFeaturesX86.cs  OsBaseFeaturesX86.cs  OsPreservesX86.cs  WindowsFeaturesX86.cs
src/CpuFeaturesDotNet/X86/Simd/: AmdFeaturesX86.cs  BaseSimdFeaturesX86.cs  IntelFeaturesX86.cs  LeafSimdX86.cs
src/CpuX86/: CacheInfoX86.cs  CacheLevelInfoX86.cs  CacheTypeX86.cs  CpuCacheInfoX86.cs  CpuInfoX86.cs  VendorX86.cs
src/IO/: FileSystem.cs  LineResult.cs  StackLineReader.cs  StringView.cs
src/Imports/: DllPath.cs
src/Libs/: DllPath.cs
src/Native/: Architecture.cs  DllPath.cs
src/Native/OperatingSystem/: DarwinNative.cs  OSNative.cs  WindowsNative.cs
src/Utils/: Architecture.cs  BitUtils.cs  FeaturesUtilsX86.cs  MemoryUtils.cs  OperatingSystem.cs  StringUtils.cs  UtilsX86.cs
src/X86/: CacheInfoX86.cs  CacheLevelInfoX86.cs  CpuInfoX86.cs  FeaturesAmxX86.cs  FeaturesAvxX86.cs  FeaturesSseX86.cs  FeaturesX86.cs  Leaf.cs  OsPreservesX86.cs  UtilsX86.cs  VendorX86.cs
src/X86/Cache/: CacheInfoX86.cs
src/X86/Features/: FeaturesAmxX86.cs  FeaturesSseX86.cs  FeaturesX86.cs
src/X86/OperatingSystem/: FreeBsdFeaturesX86.cs  OsBaseFeaturesX86.cs
src/X86/Simd/: AmdFeaturesX86.cs  BaseSimdFeaturesX86.cs  IntelFeaturesX86.cs  LeafSimd.cs  LeafSimdX86.cs
tests/: CpuFeaturesDotNet.Testing.csproj  CpuFeaturesDotNet.UnitTesting.csproj  CpuInfoArmTests.cs  DllImportAArch64Tests.cs  DllImportArmTests.cs  DllImportX86Tests.cs  Dockerfile  Dockerfile.buster-slim-arm32v7  Dockerfile.buster-slim-arm64v8  Dockerfile.buster-slim-i386  Dockerfile.ubuntu-i386-dotnet50
(+34 files in other folders)
